@@ -11,7 +11,7 @@
 #
 ##############################################################################
 __doc__="""Copy interface"""
-__version__='$Revision: 1.86 $'[11:-2]
+__version__='$Revision: 1.87 $'[11:-2]
 
 import sys,  Globals, Moniker, tempfile, ExtensionClass
 from marshal import loads, dumps
@@ -32,8 +32,10 @@ class CopyContainer(ExtensionClass.Base):
 
     __ac_permissions__=(
         ('View management screens',
-         ('manage_cutObjects', 'manage_copyObjects', 'manage_pasteObjects',
+         ('manage_copyObjects', 'manage_pasteObjects',
           'manage_renameForm', 'manage_renameObject', 'manage_renameObjects',)),
+        ('Delete objects',
+         ('manage_cutObjects')),
         )
 
 
